# pysinker

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pysinker/: __main__.py
pysinker/core/: job_scheduler.py  yaml_parser.py
pysinker/source/: db_config.py  file_config.py  postgres_source.py  sinker_source.py
tests/: test_cli.py  test_yaml_parser.py
